[gd_scene load_steps=4 format=3 uid="uid://cjk6686ojhlv3"]

[ext_resource type="Script" path="res://enemies/fish/puffer_bubble.gd" id="1_bptmd"]
[ext_resource type="Texture2D" uid="uid://cvys47epe4wu4" path="res://enemies/fish/puffer_bubble.png" id="2_tnfon"]

[sub_resource type="CircleShape2D" id="CircleShape2D_nea1e"]
radius = 6.0

[node name="PufferBubble" type="Area2D"]
collision_layer = 7
collision_mask = 7
script = ExtResource("1_bptmd")

[node name="Sprite2D" type="Sprite2D" parent="."]
z_index = -1
texture = ExtResource("2_tnfon")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_nea1e")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
